automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
    ],
    "source": [
     "greenville_population = greenville['Population']\n",
-    "greenville_population "
+    "greenville_population # 84554"
    ]
   },
   {
@@ -122,7 +122,7 @@
    ],
    "source": [
     "greenville_area = greenville['Area']\n",
-    "greenville_area # "
+    "greenville_area # 68"
    ]
   },
   {
