--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = [cities[3].values(), citie\n",
+    "los_cabos_pop = [cities[3].values(), cities['Populatio']\n",
     "los_cabos_pop # 287651"
    ]
   },
