--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities# cities[3].values()\n",
+    "los_cabos_pop = cities['Population'][3]# cities[3].values()\n",
     "los_cabos_pop # 287651"
    ]
   },
